extends Label

var my_string = "Hats Collected"

func _ready():
	pass # Replace with function body.


func _on_Collectible_coin_collected():
	pass # Replace with function body.
	text = String(Global.score) + my_string


func _on_Collectible2_coin_collected():
	pass # Replace with function body.


func _on_Collectible3_coin_collected():
	pass # Replace with function body.


func _on_Collectible4_coin_collected():
	pass # Replace with function body.
